# mock_wx

./: README.md  pyproject.toml  template.txt
docs/: .gitignore  basic-example.rst  building-ECLs.rst  conf.py  contributing.rst  faq.rst  index.rst  installing.rst  major-players.rst
docs/_build/html/: .buildinfo  basic-example.html  building-ECLs.html  contributing.html  faq.html  genindex.html  index.html  installing.html  major-players.html  objects.inv  search.html  searchindex.js
scratch/: convert_py.py  exp1.py  name_and_address.txt  sample1.py  sample2.py  temp.css  test_sample1.py  test_sample2.py
src/calldiff/: __main__.py  app_body.py  app_header.py  application.py  constants.py
src/calldiff/control/: events.py  run_tests.py
src/calldiff/model/: app_settings.py  comparison.py  live_data.py  preferences.py  settings.py
src/calldiff/view/: diff_panel.py  main_frame.py  menubar.py  richtext.py  statusbar.py
src/mock_wx/: __init__.py  __main__.py  _test_case.py  test_case.py  test_runner.py
src/mock_wx/wx/: __init__.py  base_class.py
src/mock_wx/wx/ActivateEvent/: __init__.py
src/mock_wx/wx/ConfigBase/: __init__.py
src/mock_wx/wx/DataObject/: __init__.py
src/mock_wx/wx/DateTime/: __init__.py
src/mock_wx/wx/FileType/: __init__.py
src/mock_wx/wx/HelpEvent/: __init__.py
src/mock_wx/wx/Image/: __init__.py
src/mock_wx/wx/StandardPaths/: __init__.py
src/mock_wx/wx/StaticBitmap/: __init__.py
src/mock_wx/wx/StockPreferencesPage/: __init__.py
src/mock_wx/wx/TopLevelWindow/: __init__.py
src/mock_wx/wx/Window/: __init__.py
(+110 files in other folders)
