[project]
name = "CallDiff"
version = "0.0.0"
description = "Compare call lists"
authors = [
    { name = "Gre7g Luterman", email = "gre7g.luterman@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypubsub==4.0.3",
    "wxpython==4.2.3",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.black]
line-length = 120
